// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFieldNumber is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <div
      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--left euiFormControlLayoutIcons--absolute"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="warning"
        />
      </span>
    </div>
    <input
      aria-label="aria-label"
      class="euiFieldNumber testClass1 testClass2 emotion-euiTestCss euiFieldNumber--withIcon"
      data-test-subj="test subject string"
      id="1"
      max="8"
      min="1"
      name="elastic"
      step="1"
      type="number"
      value="1"
    />
  </div>
</div>
`;

exports[`EuiFieldNumber props controlOnly is rendered 1`] = `
<input
  class="euiFieldNumber"
  step="any"
  type="number"
  value=""
/>
`;

exports[`EuiFieldNumber props fullWidth is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--fullWidth"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <input
      class="euiFieldNumber euiFieldNumber--fullWidth"
      step="any"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`EuiFieldNumber props isInvalid is rendered from a prop 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <input
      aria-invalid="true"
      class="euiFieldNumber euiFormControlLayout--1icons"
      step="any"
      type="number"
      value=""
    />
    <div
      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
    >
      <span
        color="danger"
        data-euiicon-type="warning"
      />
    </div>
  </div>
</div>
`;

exports[`EuiFieldNumber props isLoading is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <input
      class="euiFieldNumber euiFormControlLayout--1icons euiFieldNumber-isLoading"
      step="any"
      type="number"
      value=""
    />
    <div
      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
    >
      <span
        aria-label="Loading"
        class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`EuiFieldNumber props readOnly is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--readOnly"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <input
      class="euiFieldNumber"
      readonly=""
      step="any"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`EuiFieldNumber props value no initial value 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <input
      class="euiFieldNumber"
      step="any"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`EuiFieldNumber props value value is number 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <input
      class="euiFieldNumber"
      step="any"
      type="number"
      value="0"
    />
  </div>
</div>
`;
